--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,186 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-:root{
+:root {
     font-size: 62.5%;
-    /* em caso para usar medidas relativas e responsividade ideal usar no root */
-    /* usar rem pois ele respeita o root */
-    /* em redefine tudo em caso de você ter uma div pai e só funciona se tiver um elemento pai e faz alguma alteração o rem não */
-    /* vh visao da pagina */
-
 }
 
-h1{
-    color: #ff0000;
-    font-size: 80px;
+body {
+    font-family: 'times new roman';
+    font-size: 1.8rem;
+}
+
+main {
+    padding-top: 7rem;
+}
+
+table, td, th {
+    border: 1px solid black;
+}
+
+table tr:first-child {
+    background-color: steelblue;
+    color: #fff;
+}
+
+table tr:nth-child(2n + 3) {
+    background-color: #AAA;
+}
+
+table {
+    font-size: 2.4rem;
+    border-collapse: separate;
+}
+
+h1 {
+    color: blueviolet;
     font-weight: 900;
-    font-style: oblique;
-    text-decoration: underline;
     text-transform: capitalize;
     text-align: center;
-    font-size: 9.5rem;
+    font-size: 4.6rem;
 }
 
-p{
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Roboto', arial, cursive;
+}
+
+h2 {
+    font-size: 2.4rem;
+}
+
+.novo-em {
+    font-size: 300%;
+}
+
+p {
+    font-size: 1.8rem;
     text-align: justify;
-    color: blue;
-    font-family: "Inter", serif;
-
-}
-.bg{
-    background-color: aqua;
-    height: 500px;
-    width: 100%;
-    background-image: url('https://plus.unsplash.com/premium_photo-1690522330763-7cdc0f1eecc4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D');
-    background-size: cover;
-    background-repeat: no-repeat; 
-    background-position: center;
-    background-attachment: fixed;
+    text-indent: 90px;
 }
 
-a{
-    font-size: 2.5em;
+a {
+    font-size: 2.4rem;
     color: red;
 }
 
-a:visited{
+a:visited {
     color: darkgreen;
 }
-/* como temos visited o hover tem que ir por ultimo e active caso tivermos tambem para evitar erro de interpretação */
-a:hover{
+
+a:hover {
     color: coral;
+}
+
+.bg {
+    height: 20vh;
+    width: 100%;
+    background-color: #555;
+    background-image: url('https://images.unsplash.com/photo-1492138786289-d35ea832da43?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    /* background-attachment: fixed; */
+}
+
+ul, ol {
+    padding-left: 3.2rem;
+}
+
+ul {
+    list-style: square;
+}
+
+ol {
+    list-style: upper-roman;
+}
+
+nav.menu {
+    position: fixed;
+    background-color: steelblue;
+    width: 100%;
+    height: 7rem;
+    z-index: 1;
+}
+
+.contact-list {
+    position: relative;
+}
+
+.contact-list h2 {
+    top: 7rem;
+    position: sticky;
+    background-color: limegreen;
+}
+
+.boxes {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.box + span {
+    display: none;
+}
+
+.box {
+    flex: 30%;
+    height: 10rem;
+    width: 20rem;
+    margin: 1.5rem;
+    padding: 1.5rem;
+    background-color: blue;
+    color: #fff;
+    border: 10px solid red;
+    display: inline-block;
+    border-radius: 0.4rem;
+    position: relative;
+}
+
+
+.box p {
+    font-size: 5rem;
+}
+
+.box:nth-child(1) {
+    float: none;
+}
+
+.box + span {
+    clear: both;
+}
+
+/* .box:nth-child(1) {
+    position: absolute;
+    top: 30px;
+    left: 100px;
+} */
+
+/* .box:nth-child(2) {
+    position: fixed;
+    top: 15px;
+    left: 30px;
+} */
+
+.box:nth-child(n + 2) {
+    /* display: none; */
+}
+
+.box:nth-child(1), .box:nth-child(2) {
+}
+
+.box:nth-child(3) {
+}
+
+.boxes p {
+    display: inline;
+}
+
+img {
+    clear: both;
+    height: 10rem;
+    width: 14rem;
+    object-fit: cover;
 }
